# devpilot

./: .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE_GAP_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PLAN-P11.md  README.md  SECURITY_AUDIT_REPORT.md  TODO.md  deny.toml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.brv/: config.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pr-checks.yml  quality.yml  release.yml  security.yml
.husky/: commit-msg  pre-push
crates/devpilot-agent/: Cargo.toml
crates/devpilot-agent/src/: lib.rs
crates/devpilot-bridge/: Cargo.toml
crates/devpilot-bridge/src/: bridge.rs  bridge_trait.rs  error.rs  lib.rs  platforms.rs  types.rs
crates/devpilot-core/: Cargo.toml
crates/devpilot-core/src/: agent.rs  approval.rs  compact.rs  error.rs  event_bus.rs  lib.rs  permission.rs  session.rs  session_ops.rs
crates/devpilot-git/: Cargo.toml
crates/devpilot-git/src/: lib.rs
crates/devpilot-index/: Cargo.toml
crates/devpilot-index/src/: error.rs  indexer.rs  language.rs  lib.rs  search.rs  symbol.rs
crates/devpilot-llm/: Cargo.toml
crates/devpilot-llm/src/: anthropic.rs  chinese.rs  diagnostics.rs  error.rs  failover.rs  fallback_provider.rs  google.rs  lib.rs  ollama.rs  openai.rs  pricing.rs  provider.rs  registry.rs  retry.rs  types.rs
crates/devpilot-mcp/: Cargo.toml
crates/devpilot-mcp/src/: client.rs  error.rs  lib.rs  manager.rs  transport.rs
crates/devpilot-media/: Cargo.toml
crates/devpilot-media/src/: batch.rs  error.rs  lib.rs  manager.rs  providers.rs  types.rs
crates/devpilot-memory/: Cargo.toml
crates/devpilot-memory/src/: daily.rs  lib.rs  persona.rs  prompt.rs  search.rs
crates/devpilot-protocol/: Cargo.toml
crates/devpilot-protocol/src/: lib.rs
crates/devpilot-remote/: Cargo.toml
crates/devpilot-remote/src/: lib.rs
crates/devpilot-sandbox/: Cargo.toml
crates/devpilot-sandbox/src/: error.rs  lib.rs  policy.rs  runner.rs
crates/devpilot-scheduler/: Cargo.toml
crates/devpilot-scheduler/src/: error.rs  lib.rs  scheduler.rs  task.rs
crates/devpilot-search/: Cargo.toml
crates/devpilot-search/src/: content.rs  engine.rs  error.rs  fuzzy.rs  lib.rs  query.rs
crates/devpilot-store/: Cargo.toml
crates/devpilot-store/src/: claude_import.rs  config.rs  crypto.rs  error.rs  lib.rs  store.rs  types.rs
crates/devpilot-tools/: Cargo.toml
crates/devpilot-tools/src/: error.rs  executor.rs  hooks.rs  lib.rs  registry.rs  skill_loader.rs  skills_marketplace.rs  tools.rs
crates/devpilot-tools/src/tools/: apply_patch.rs  ask_user.rs  file_read.rs  file_search.rs  file_write.rs  glob.rs  list_directory.rs  notebook_edit.rs  path_security.rs  send_message.rs  shell.rs  sleep.rs  todo_write.rs  web_fetch.rs  web_search.rs
docs/: BACKEND-GUIDE.md  CHANGELOG.md  DEVLOG.md  FEATURE_SPECS_P7.md  PRD-v2.md  PRD.md  TODO.md  ai-frontend-techstack.md  claude-code-comparison.md  codepilot-analysis.md  competitor-analysis.md  frontend-roadmap.md
docs/plans/: 2026-04-18-phase1-llm-streaming.md
scripts/: security-audit.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent.rs  bridge.rs  config.rs  data.rs  editor.rs  git.rs  hooks.rs  llm.rs  marketplace.rs  mcp.rs  media.rs  memory.rs  mod.rs  pty.rs  sandbox.rs  scheduler.rs  search.rs  session_ops.rs  skills.rs  symbol.rs  tools.rs
src-tauri/tests/: e2e_test.rs
src/__tests__/: setup.ts
src/__tests__/components/: ApprovalOverlay.test.tsx  AskUserQuestion.test.tsx  AssistantMessage.test.tsx  CodeBlock.test.tsx  CommandPalette.test.tsx  DiffView.test.tsx  ImageGallery.test.tsx  MarkdownRenderer.test.tsx  MessageInput.test.tsx  MessageList.test.tsx  ModeTabs.test.tsx  ModelSelector.test.tsx  QuickFileSearch.test.tsx  Sidebar.test.tsx  ThinkingBlock.test.tsx  ToastContainer.test.tsx  ToolCallView.test.tsx  UserMessage.test.tsx  shared.test.tsx
src/__tests__/helpers/: renderWithProviders.tsx
src/__tests__/lib/: errors.test.ts  persistence.test.ts  systemPrompt.test.ts  utils.test.ts
src/__tests__/stores/: bridgeStore.test.ts  chatStore.test.ts  checkpointStore.test.ts  gitStore.test.ts  mcpStore.test.ts  mediaStore.test.ts  memoryStore.test.ts  onboardingStore.test.ts  providerStore.test.ts  providerStoreExpanded.test.ts  schedulerStore.test.ts  settingsStore.test.ts  shortcutStore.test.ts  skillStore.test.ts  streaming.test.ts  tabStore.test.ts  toastStore.test.ts  uiStore.test.ts  updateStore.test.ts  usageStore.test.ts  usageStoreExpanded.test.ts
src/app/: BridgePage.tsx  GalleryPage.tsx  RemotePage.tsx  SchedulerPage.tsx  SettingsPage.tsx  SkillsPage.tsx
src/components/: CommandPalette.tsx  ErrorBoundary.tsx  MessageSearchDialog.tsx  OnboardingWizard.tsx  PersonaMemoryTab.tsx  QuickFileSearch.tsx  ToastContainer.tsx  UpdateChecker.tsx
src/components/chat/: AgentSelector.tsx  ApprovalOverlay.tsx  AskUserQuestion.tsx  AssistantMessage.tsx  ChatPanel.tsx  CheckpointPanel.tsx  CitationBadge.tsx  CodeBlock.tsx  (+32 more)
src/hooks/: useDiffHighlight.ts  useKeyboardShortcuts.ts  useStreamRenderer.ts  useTauri.ts  useTheme.tsx
src/i18n/: en.ts  index.tsx  types.ts  zh.ts
src/lib/: artifactRenderer.ts  diff.ts  docxRenderer.ts  errors.ts  ipc.ts  pdfRenderer.ts  persistence.ts  sessionTemplates.ts  shiki.ts  streamController.ts  systemPrompt.ts  utils.ts
src/stores/: agentStore.ts  bridgeStore.ts  chatStore.ts  checkpointStore.ts  editorStore.ts  gitStore.ts  indexerStore.ts  marketplaceStore.ts  mcpStore.ts  mediaStore.ts  memoryStore.ts  onboardingStore.ts  presetStore.ts  providerStore.ts  schedulerStore.ts  settingsStore.ts  shortcutStore.ts  skillStore.ts  tabStore.ts  toastStore.ts  uiStore.ts  updateStore.ts  usageStore.ts
src/types/: index.ts
tests/: integration_test_helper.rs
tests/common/: mod.rs
(+21 files in other folders)
