[workspace]
resolver = "3"
members = [
    "crates/devpilot-core",
    "crates/devpilot-index",
    "crates/devpilot-sandbox",
    "crates/devpilot-search",
    "crates/devpilot-scheduler",
    "crates/devpilot-bridge",
    "crates/devpilot-remote",
    "crates/devpilot-media",
    "crates/devpilot-llm",
    "crates/devpilot-protocol",
    "crates/devpilot-store",
    "crates/devpilot-tools",
    "crates/devpilot-agent",
    "crates/devpilot-mcp",
    "crates/devpilot-memory",
    "crates/devpilot-git",
    "src-tauri",
]

[workspace.package]
version = "2026.4.30"
edition = "2024"
license = "Apache-2.0"
authors = ["DevPilot Team"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures = "0.3"
async-trait = "0.1"
eventsource-stream = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "6"
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
libc = "0.2"
toml = "0.8"
