[package]
name = "devpilot"
version.workspace = true
description = "DevPilot — AI Coding Agent Desktop Client"
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "devpilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
devpilot-protocol = { path = "../crates/devpilot-protocol" }
devpilot-llm = { path = "../crates/devpilot-llm" }
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
