[package]
name = "devpilot"
version.workspace = true
description = "DevPilot — AI Coding Agent Desktop Client"
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "devpilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
devpilot-protocol = { path = "../crates/devpilot-protocol" }
devpilot-llm = { path = "../crates/devpilot-llm" }
devpilot-store = { path = "../crates/devpilot-store" }
devpilot-tools = { path = "../crates/devpilot-tools" }
devpilot-core = { path = "../crates/devpilot-core" }
devpilot-sandbox = { path = "../crates/devpilot-sandbox" }
devpilot-search = { path = "../crates/devpilot-search" }
devpilot-scheduler = { path = "../crates/devpilot-scheduler" }
devpilot-bridge = { path = "../crates/devpilot-bridge" }
devpilot-media = { path = "../crates/devpilot-media" }
devpilot-mcp = { path = "../crates/devpilot-mcp" }
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures.workspace = true
