[package]
name = "devpilot-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Sub-agent spawning, task management, and plan mode tools for DevPilot"

[dependencies]
devpilot-tools = { path = "../devpilot-tools" }
devpilot-protocol = { path = "../devpilot-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde_yaml = { workspace = true }
