[package]
name = "devpilot-git"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Git operations panel — status, diff, log, commit, stash, branch management"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
git2 = { version = "0.19", default-features = false }
chrono = { workspace = true }
tracing = { workspace = true }
