[package]
name = "devpilot-index"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Code symbol index — tree-sitter parsing with fuzzy/BM25 search"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt", "macros", "sync"] }
tracing = { workspace = true }
thiserror = { workspace = true }
tree-sitter = "0.24"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
walkdir = "2"
rayon = "1.10"
dashmap = "6"
ignore = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"
