[package]
name = "devpilot-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Multi-provider LLM client abstraction for DevPilot"

[dependencies]
devpilot-protocol = { path = "../devpilot-protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
reqwest.workspace = true
futures.workspace = true
async-trait.workspace = true
eventsource-stream.workspace = true
tracing.workspace = true
uuid.workspace = true
