[package]
name = "devpilot-media"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Image generation — DALL-E, Stable Diffusion, Gemini, and other providers"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
