[package]
name = "devpilot-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Persona file management and daily memory for DevPilot"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt", "io-util"] }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"
