[package]
name = "devpilot-remote"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Remote control WebSocket server for mobile device pairing and control"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true }
tokio-tungstenite = "0.26"
futures-util = "0.3"
local-ip-address = "0.6"
