[package]
name = "devpilot-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sandboxed command execution with resource limits and filesystem isolation"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process", "time", "rt", "macros"] }
tracing = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
