[package]
name = "devpilot-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SQLite persistence layer for DevPilot"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
