[package]
name = "devpilot-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tool registry, shell execution, file operations for DevPilot"

[dependencies]
devpilot-protocol = { path = "../devpilot-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
glob = "0.3"
dirs = { workspace = true }
serde_yaml = "0.9"
devpilot-search = { path = "../devpilot-search" }

[dev-dependencies]
tempfile = "3"
